# OPC-UA-Server-for-CNC

./: .gitignore  .gitmodules  CMakeLists.txt  OPC UA Server for CNC workspace.code-workspace  README.md
Dependencies/: CMakeLists.txt
Dependencies/open62541/: open62541.c  open62541.h
include/: cnc_error_codes.h  cnc_machine.h  cnc_mashine.h  entry_point.h  libs_config.h  opcua_log.h  opcua_msgpack.h  shared_memory.h
source/: CMakelists.txt  cnc_machine.cpp  main.cpp  opcua_log.cpp  opcua_msgpack.cpp  shared_memory.cpp
